src/content/docs/sdk/ios/v5/features/deep-links/deferred-ja.mdx
---
title: ディファードディープリンクの設定
description: アプリのディファードディープリンクを設定します。
slug: ja/sdk/ios/features/deep-links/deferred
sidebar-position: 4
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /ja/sdk/ios/v4/features/deep-links/deferred
---

ディファードディープリンクは、ユーザーをApp Storeに誘導して、アプリをインストールした後に、アプリ内のある場所にユーザーを送ります。

## 仕組み {#how-it-works}

ディファードディープリンクは次のように機能します。

1. ユーザーがAdjustディープリンクをクリックします。
2. AdjustサーバーがユーザーをApp Storeにリダイレクトします。
3. ユーザーがアプリをインストールして開きます。
4. Adjustサーバーがアトリビューションを実行し、ディープリンクがAdjust SDKに送られます。
5. アプリには、必要に応じて、オンボーディング画面やユーザーログインなどのコンテンツが表示されます。
6. アプリがAdjust SDKからディープリンクを取得し、ディープリンクを処理します。

## 設定 {#setup}

<Callout type="important">

Adjustディファードディープリンクを設定する場合は、アプリで他のSDKのディファードディープリンクを無効にする必要があります。また、他のMMPからのディープリンク設定を無効にする必要があります。

</Callout>
<Callout type="seealso">

Facebookキャンペーンでディープリンクを設定する方法については、[ディファードディープリンクに関するFacebookのドキュメント](https://developers.facebook.com/docs/ios/deep-linking#deferred-deep-linking)を参照してください。

</Callout>

アプリでディファードディープリンクを設定する方法には、次の2つがあります。

1. Adjustのサーバーが、ディファードディープリンクをAdjust SDKに自動的にパスします。ユーザーがアプリを開くと、Adjust SDKはそのディープリンクを使用して`open(_:options:completionHandler:)`メソッドを自動的に呼び出します。アプリにオンボーディング画面やユーザーログインなどのコンテンツがない場合、またはディープリンクを開く前にアプリがすでにこのコンテンツを処理している場合は、これ以上の設定は不要です。このセクションの残りの部分はスキップすることができます。
2. アプリにオンボーディング画面やユーザーログインなどのコンテンツがあり、ディープリンクを開く前にアプリがこのコンテンツをまだ処理していない場合、ディファードディープリンクのリスナーを追加することができます。

### ディファードディープリンクのリスナーを設定する {#set-up-a-deferred-deep-link-listener}

1. ディファードディープリンクのデリゲートコールバックを設定します。アトリビューションコールバックをすでに設定している場合は、この手順をスキップできます。

<Tabs>
<Tab title="Swift" sync="swift">
<CodeBlock title="AppDelegate.swift">

```swift
class AppDelegate: UIResponder, UIApplicationDelegate, AdjustDelegate {
}
```

</CodeBlock>
</Tab>
<Tab title="Objective-C" sync="objc">
<CodeBlock title="AppDelegate.h">

```objc
@interface AppDelegate : UIResponder <UIApplicationDelegate, AdjustDelegate>
```

</CodeBlock>
</Tab>
</Tabs>

2. まだ設定していない場合、`ADJConfig`クラスのインスタンスを作成し、アプリデリゲートで`ADJConfig`オブジェクトにデリゲートを設定します。SDKを初期化する前に、`ADJConfig`デリゲートを設定する必要があります。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox
let adjustConfig = ADJConfig(
    appToken: yourAppToken,
    environment: environment)
adjustConfig?.delegate = self

// ...

Adjust.initSdk(adjustConfig)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:@"{YourAppToken}"
                                            environment:ADJEnvironmentSandbox];
[adjustConfig setDelegate:self];

// ...

[Adjust initSdk:adjustConfig];
```

</Tab>
</Tabs>

3. ディファードディープリンクのコールバックメソッド`adjustDeferredDeeplinkReceived`をデリゲートに追加します。Adjust SDKは、ディファードディープリンクを受け取った後にこのメソッドを呼び出します。
   1. ディープリンク処理コードを設定します。
   2. `adjustDeferredDeeplinkReceived`メソッドの戻り値をtrueまたはfalseに設定します。これは、ディープリンク処理コードの実行後にAdjust SDKで`open(_:options:completionHandler:)`メソッドを呼び出してディープリンクを開くかどうかを示します。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func adjustDeferredDeeplinkReceived(_ deeplink: URL?) -> Bool {
   // add your code below to handle deep link
   // (for example, show onboarding screens, then open deep link content)
   // deeplink object contains the deep link

   return false
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (BOOL)adjustDeferredDeeplinkReceived:(NSURL *)deeplink {
      // add your code below to handle deep link
      // (for example, show onboarding screens, then open deep link content)
      // deeplink object contains the deep link

      return NO;
}
```

</Tab>
</Tabs>

## Adjust LinkMeを設定する {#set-up-adjust-linkme}

<CodeBlock title="メソッドシグネチャー">

```objc
- (void)enableLinkMe;
```

</CodeBlock>
<Callout type="note">

アプリにLinkMeを実装する必要があるかどうかをマーケティングチームと相談してください。

</Callout>

[AdjustのLinkMeソリューション](https://help.adjust.com/ja/article/linkme)は、デバイスのクリップボードからディープリンク情報を読み取ることで、強力なディファードディープリンクのパフォーマンスを保証するオプション機能です。

<Callout type="important">

Adjust SDKは、ユーザーがアプリを初回起動した際にペーストボードを確認します。デバイスは、ユーザーのアプリに、ペーストボードの読み取りを許可するかどうかを尋ねるダイアログを表示します。

</Callout>

ユーザーがLinkMeのURLをクリックすると、そのリンク情報をシステムのペーストボードにコピーするオプションがあります。Adjust SDKを使用してシステムのペーストボードを読み、ディープリンクの情報を確認することができます。ディープリンクがある場合、Adjust SDKはユーザーをアプリ内の正しいページに転送します。

アプリ内でペーストボードの確認を有効化するには、`[ADJConfig enableLinkMe]`メソッドを呼び出します。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox
let adjustConfig = ADJConfig(
    appToken: yourAppToken,
    environment: environment)
// ...
adjustConfig.enableLinkMe()
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
NSString *yourAppToken = @"{YourAppToken}";
NSString *environment = ADJEnvironmentSandbox;
ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:@"{YourAppToken}"
                                            environment:ADJEnvironmentSandbox];
/// ...
[adjustConfig enableLinkMe];
```

</Tab>
</Tabs>
